leptos_macro/tests/view/08_generic_prop_missing.stderr
error[E0599]: the method `__check_missing` exists for struct `InnerPropsBuilder<_, ((i32,), (), (Arc<dyn Fn() -> AnyView + Send + std::marker::Sync>,))>`, but its trait bounds were not satisfied
  --> tests/view/08_generic_prop_missing.rs:10:14
   |
10 |             <Inner concrete_i32=42>
   |              ^^^^^ method cannot be called due to unsatisfied trait bounds
...
17 | #[component]
   | ------------ method `__check_missing` not found for this struct
   |
note: trait bound `(): __required_Inner_generic_fun` was not satisfied
  --> tests/view/08_generic_prop_missing.rs:17:1
   |
17 | #[component]
   | ^^^^^^^^^^^^
   = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
